Bug #11650
ZFS user accounting fixes
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Description
Port over the following two ZoL user accounting fixes:
bb1be77a3 Prevent user accounting on readonly pool
163a8c28d ZIL claiming should not start user accounting
History
Updated by Jerry Jelinek 3 months ago
I tested this with a zfs-test run which includes the new test that passes clean.
Updated by Electric Monk 3 months ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 8bf394f116a79c011b8f9f3bd199e09b363742ef
commit 8bf394f116a79c011b8f9f3bd199e09b363742ef Author: Tom Caputi <tcaputi@datto.com> Date: 2019-09-12T15:24:01.000Z 11650 ZFS user accounting fixes Portions contributed by: Jerry Jelinek <jerry.jelinek@joyent.com> Portions contributed by: loli10K <ezomori.nozomu@gmail.com> Reviewed by: Brian Behlendorf <behlendorf1@llnl.gov> Reviewed by: Alek Pinchuk <apinchuk@datto.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Kody Kantor <kody.kantor@joyent.com> Approved by: Gordon Ross <gwr@nexenta.com>